# ArchLab

./: .gitignore  CMakeLists.txt  bigchars.c  bigchars.h  command.c  command.h  main.c  mainloop.c  mainloop.h  memory.c  memory.h  mysimplecomputer.h  process.c  process.h  readkey.c  readkey.h  term.c  term.h
